--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href = "#chips"> Click to go to bottom picture </a>
         <p>I will show you a list of <b> <i>Guacomole ingredients </i></b>,and my current <b> <i>favorite song! </i> </b> </p> <!--Requirement 1.G-->
     </header>
-    <a href="https://github.com/OttoDel/IamOttoDel/blob/576b3e3d9f8a4cb0ef5fb39a3d3c4b5a1112cbdb/page1-1.html"> Click the Link for my favorite song</a> <!--Requirement 1.J-->
+    <a href="https://ottodel.github.io/IamOttoDel/page1-1.html"> Click the Link for my favorite song</a> <!--Requirement 1.J-->
      <figure> <!--Requirement 1.L-->
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS4wAYiD_QB6lG_2r77a2EZKuZHYpCgUA2lg&usqp=CAU"> <!--Requirement 1.N-->
     <figcaption>Fig.1 - Delicious Guacomole. </figcaption> <!--Requirement 1.M-->
