--- a/page1-1.html
+++ b/page1-1.html
@@ -20,7 +20,7 @@
     <nav>   <!--Requirement 1.D-->
     <ul>
    <li> <a href="https://www.youtube.com/watch?v=KN8nJFLu1Rk&ab_channel=tameimpalaVEVO" target="_blank"> Click for My favorite song</a> </li><!--Requirement 1.I-->
-   <li> <a href="/"> Go home to <B>Guacomole!!!</B>></a></li>
+   <li> <a href="IamOttoDel/index.html"> Go home to <B>Guacomole!!!</B>></a></li>
 
     </ul>
     </nav>
