--- a/page1-1.html
+++ b/page1-1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h2> This is my current favorite song </h2>
+    <h2 id="favsong"> This is my current favorite song </h2>
     
 
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSP6bzHkry2MPkmTBPwGaGGzldOtHlKTauQOw&usqp=CAU" alt="" >
